--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -52,7 +52,7 @@
                 <div class="col-12 h-100">
                     <nav class="h-100 navbar navbar-expand-lg">
                         <h1 class="nav-link" style="color:rgb(255, 255, 255)" href="/">Discover </h1>
-                        <!-- <a class="navbar-brand" href="/"><img src="img/core-img/logo.png" alt=""></a> -->
+                        <!-- <a class="navbar-brand" href="/"><img src="img/core-img/logo.png"></a> -->
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dorneNav" aria-controls="dorneNav" aria-expanded="false" aria-label="Toggle navigation"><span class="fa fa-bars"></span></button>
                         <!-- Nav -->
                         <div class="collapse navbar-collapse" id="dorneNav">
@@ -300,18 +300,18 @@
                 <!-- Single Features Area -->
                 <div>
                     <div class="single-features-area">
-                        <img id="03" onclick=map(latlong1) src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P02000185_3.jpeg" alt="">
+                        <img id="03" onclick=map(latlong1) src="/img/noimage.png">
                         <!-- Price -->
                         <!-- <div class="price-start">
                             <p>FROM 2800-9000 THB</p>
                         </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <a id="04"><h5 id="01">Lantana Resort</h5></a>
-                                <p id="02">Bangkok</p>
+                                <a id="04"><h5 id="01"></h5></a>
+                                <p id="02"></p>
                             </div>
                             <div class="feature-favourite">
-                                <a onclick=fav(0)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                <!-- <a onclick=fav(0)><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -319,18 +319,18 @@
                 <!-- Single Features Area -->
                 <a id="14" href="/">
                     <div class="single-features-area">
-                        <img id="13" src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012360_1.jpg" alt="">
+                        <img id="13" src="/img/noimage.png">
                         <!-- Price -->
                         <!-- <div class="price-start">
                             <p>FROM 500-3000 THB</p>
                         </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5 id="11">The Countryside Resort</h5>
-                                <p id="12">Maehongson</p>
+                                <h5 id="11"></h5>
+                                <p id="12"></p>
                             </div>
                             <div class="feature-favourite">
-                                <a onclick=fav(1)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                <!-- <a onclick=fav(1)><i class="fa fa-heart-o" aria-hidden="true"></i></a> -->
                             </div>
                         </div>
                     </div>
@@ -338,15 +338,15 @@
                 <!-- Single Features Area -->
                 <a id="24" href="/">
                     <div class="single-features-area">
-                        <img id="23" src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
+                        <img id="23" src="/img/noimage.png">
                         <!-- Price -->
                         <!-- <div class="price-start">
                             <p>FROM 1000-3000 THB</p>
                         </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5 id="21">Krabifrontbay Resort</h5>
-                                <p id="22">Krabi</p>
+                                <h5 id="21"></h5>
+                                <p id="22"></p>
                             </div>
                             <div class="feature-favourite">
                                 <a onclick=fav(2)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -357,15 +357,15 @@
                 <!-- Single Features Area -->
                 <a id="34" href="/">
                     <div class="single-features-area">
-                        <img id="33" src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
+                        <img id="33" src="/img/noimage.png">
                         <!-- Price -->
                         <!-- <div class="price-start">
                             <p>FROM 1000-3000 THB</p>
                         </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5 id="31">Krabifrontbay Resort</h5>
-                                <p id="32">Krabi</p>
+                                <h5 id="31"></h5>
+                                <p id="32"></p>
                             </div>
                             <div class="feature-favourite">
                                 <a onclick=fav(3)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -376,15 +376,15 @@
                 <!-- Single Features Area -->
                 <a id="44" href="/">
                     <div class="single-features-area">
-                        <img id="43" src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
+                        <img id="43" src="/img/noimage.png">
                         <!-- Price -->
                         <!-- <div class="price-start">
                             <p>FROM 1000-3000 THB</p>
                         </div> -->
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5 id="41">Krabifrontbay Resort</h5>
-                                <p id="42">Krabi</p>
+                                <h5 id="41"></h5>
+                                <p id="42"></p>
                             </div>
                             <div class="feature-favourite">
                                 <a onclick=fav(4)></a><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -398,7 +398,7 @@
 
                 <!-- Single Features Area -->
                 <!-- <div class="single-features-area">
-                    <img src="img/bg-img/feature-4.jpg" alt=""> -->
+                    <img src="img/bg-img/feature-4.jpg"> -->
                 <!-- Price -->
                 <!-- <div class="price-start">
                         <p>FROM $59/night</p>
@@ -465,6 +465,7 @@
     <!-- favorite -->
     <script src="js/favorite.js"></script>
     <script>
+        var latlong1 = ""
         $(document).ready(setup(),readcookie(),map(latlong1));
     </script>
 </body>
