--- a/views/single-listing.ejs
+++ b/views/single-listing.ejs
@@ -438,6 +438,9 @@
     <script src="js/active.js"></script>
     <!-- api_place JS -->
     <script src="js/api_place.js"></script>
+    <script>
+    $(document).ready(map(bangkok))
+    </script>
 </body>
 
 </html>
