single_listing + location_map

--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -296,113 +296,115 @@
             </div>
 
             <!-- Explore Search Result -->
-            <div class="explore-search-result">
-                <!-- Single Features Area -->
-                <div>
-                    <div class="single-features-area">
-                        <img id="03" onclick=map(latlong[0]) src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P02000185_3.jpeg" alt="">
-                        <!-- Price -->
-                        <!-- <div class="price-start">
+            <a id="04" href="/">
+                <div class="explore-search-result">
+                    <!-- Single Features Area -->
+                    <div>
+                        <div class="single-features-area">
+                            <img id="03" onclick=map(lat[0]+lng[0]) src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P02000185_3.jpeg" alt="">
+                            <!-- Price -->
+                            <!-- <div class="price-start">
                             <p>FROM 2800-9000 THB</p>
                         </div> -->
-                        <div class="feature-content d-flex align-items-center justify-content-between">
-                            <div class="feature-title">
-                                <a id="04">
-                                    <h5 id="01">Lantana Resort</h5>
-                                </a>
-                                <p id="02">Bangkok</p>
-                            </div>
-                            <div class="feature-favourite">
-                                <a onclick=fav(0)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                            <div class="feature-content d-flex align-items-center justify-content-between">
+                                <div class="feature-title">
+                                    <a id="04">
+                                        <h5 id="01">Lantana Resort</h5>
+                                    </a>
+                                    <p id="02">Bangkok</p>
+                                </div>
+                                <div class="feature-favourite">
+                                    <a onclick=fav(0)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <!-- Single Features Area -->
-                <!-- <a id="14" href="/"> -->
-                <div class="single-features-area">
-                    <img id="13" onclick=map(latlong[1]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012360_1.jpg" alt="">
-                    <!-- Price -->
-                    <!-- <div class="price-start">
+            </a>
+            <!-- Single Features Area -->
+            <!-- <a id="14" href="/"> -->
+            <div class="single-features-area">
+                <img id="13" onclick=map(lat[1]+lng[1]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012360_1.jpg" alt="">
+                <!-- Price -->
+                <!-- <div class="price-start">
                             <p>FROM 500-3000 THB</p>
                         </div> -->
-                    <div class="feature-content d-flex align-items-center justify-content-between">
-                        <div class="feature-title">
-                            <h5 id="11">The Countryside Resort</h5>
-                            <p id="12">Maehongson</p>
-                        </div>
-                        <div class="feature-favourite">
-                            <a onclick=fav(1)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                        </div>
+                <div class="feature-content d-flex align-items-center justify-content-between">
+                    <div class="feature-title">
+                        <h5 id="11">The Countryside Resort</h5>
+                        <p id="12">Maehongson</p>
+                    </div>
+                    <div class="feature-favourite">
+                        <a onclick=fav(1)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                     </div>
                 </div>
-                <!-- </a> -->
-                <!-- Single Features Area -->
-                <!-- <a id="24" href="/"> -->
-                <div class="single-features-area">
-                    <img id="23" onclick=map(latlong[2]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
-                    <!-- Price -->
-                    <!-- <div class="price-start">
+            </div>
+            <!-- </a> -->
+            <!-- Single Features Area -->
+            <!-- <a id="24" href="/"> -->
+            <div class="single-features-area">
+                <img id="23" onclick=map(lat[2]+lng[2]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
+                <!-- Price -->
+                <!-- <div class="price-start">
                             <p>FROM 1000-3000 THB</p>
                         </div> -->
-                    <div class="feature-content d-flex align-items-center justify-content-between">
-                        <div class="feature-title">
-                            <h5 id="21">Krabifrontbay Resort</h5>
-                            <p id="22">Krabi</p>
-                        </div>
-                        <div class="feature-favourite">
-                            <a onclick=fav(2)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                        </div>
+                <div class="feature-content d-flex align-items-center justify-content-between">
+                    <div class="feature-title">
+                        <h5 id="21">Krabifrontbay Resort</h5>
+                        <p id="22">Krabi</p>
+                    </div>
+                    <div class="feature-favourite">
+                        <a onclick=fav(2)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                     </div>
                 </div>
-                <!-- </a> -->
-                <!-- Single Features Area -->
-                <!-- <a id="34" href="/"> -->
-                <div class="single-features-area">
-                    <img id="33" onclick=map(latlong[3]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
-                    <!-- Price -->
-                    <!-- <div class="price-start">
+            </div>
+            <!-- </a> -->
+            <!-- Single Features Area -->
+            <!-- <a id="34" href="/"> -->
+            <div class="single-features-area">
+                <img id="33" onclick=map(lat[3]+lng[3]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
+                <!-- Price -->
+                <!-- <div class="price-start">
                             <p>FROM 1000-3000 THB</p>
                         </div> -->
-                    <div class="feature-content d-flex align-items-center justify-content-between">
-                        <div class="feature-title">
-                            <h5 id="31">Krabifrontbay Resort</h5>
-                            <p id="32">Krabi</p>
-                        </div>
-                        <div class="feature-favourite">
-                            <a onclick=fav(3)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                        </div>
+                <div class="feature-content d-flex align-items-center justify-content-between">
+                    <div class="feature-title">
+                        <h5 id="31">Krabifrontbay Resort</h5>
+                        <p id="32">Krabi</p>
+                    </div>
+                    <div class="feature-favourite">
+                        <a onclick=fav(3)><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                     </div>
                 </div>
-                <!-- </a> -->
-                <!-- Single Features Area -->
-                <!-- <a id="44" href="/"> -->
-                <div class="single-features-area">
-                    <img id="43" onclick=map(latlong[4]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
-                    <!-- Price -->
-                    <!-- <div class="price-start">
+            </div>
+            <!-- </a> -->
+            <!-- Single Features Area -->
+            <!-- <a id="44" href="/"> -->
+            <div class="single-features-area">
+                <img id="43" onclick=map(lat[4]+lng[4]) src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
+                <!-- Price -->
+                <!-- <div class="price-start">
                             <p>FROM 1000-3000 THB</p>
                         </div> -->
-                    <div class="feature-content d-flex align-items-center justify-content-between">
-                        <div class="feature-title">
-                            <h5 id="41">Krabifrontbay Resort</h5>
-                            <p id="42">Krabi</p>
-                        </div>
-                        <div class="feature-favourite">
-                            <a onclick=fav(4)></a><i class="fa fa-heart-o" aria-hidden="true"></i></a>
-                        </div>
+                <div class="feature-content d-flex align-items-center justify-content-between">
+                    <div class="feature-title">
+                        <h5 id="41">Krabifrontbay Resort</h5>
+                        <p id="42">Krabi</p>
+                    </div>
+                    <div class="feature-favourite">
+                        <a onclick=fav(4)></a><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                     </div>
                 </div>
-                <!-- </a> -->
-                <!-- <li class="nav-item">
+            </div>
+            <!-- </a> -->
+            <!-- <li class="nav-item">
                     <a class="nav-link" href="single-listing?type=RESTAURANT&id=P08000887">See more<span class="sr-only">(current)</span></a>
                 </li> -->
 
-                <!-- Single Features Area -->
-                <!-- <div class="single-features-area">
+            <!-- Single Features Area -->
+            <!-- <div class="single-features-area">
                     <img src="img/bg-img/feature-4.jpg" alt=""> -->
-                <!-- Price -->
-                <!-- <div class="price-start">
+            <!-- Price -->
+            <!-- <div class="price-start">
                         <p>FROM $59/night</p>
                     </div>
                     <div class="feature-content d-flex align-items-center justify-content-between">
@@ -468,7 +470,7 @@
     <script src="js/favorite.js"></script>
     <script src="js/api_search.js"></script>
     <script>
-        $(document).ready(setup(), readcookie(), map(latlong[0], latlong[1], latlong[2], latlong[3], latlong[4]));
+        $(document).ready(setup(), readcookie(), map(lat[0], lng[0], latlong[1], latlong[2], latlong[3], latlong[4]));
     </script>
 </body>
 
