--- a/views/single-listing.ejs
+++ b/views/single-listing.ejs
@@ -149,9 +149,8 @@
                             </nav>
                         </div>
 
-                        <div class="overview-content mt-50" id="overview">
-                            <p>Bicycle Cafe เป็นร้านอาหารที่จำหน่ายอาหารมากมายหลายชนิด ไม่ว่าจะเป็น อาหารไทย อย่างเช่น แกงพะแนง ข้าวผัด ข้าวผัดกะเพรา หรือจะเป็นอาหารนานาชาติก็อย่างเช่นเบอร์เกอร์ที่มีให้เลือกมากมาย ซี่โครงย่าง แคลิฟอเนียโรล ซึ่งเป็นที่ถูกใจของบรรดานักท่องเที่ยวเป้นอย่างมาก
-                                และถ้าหากปั่นจักรยานมาเองทางร้านลดให้ 10% บรรยากาศหน้าร้านนั่งดูต้นไม้ใหญ่สีเขียว เหมาะเเก่การนั่งหย่อนใจเป็นที่สุด</p>
+                        <div class="overview-content mt-50">
+                            <p id="overview"></p>
                             <div class="row mt-5">
                                 <div class="col-6">
                                     <label class="custom-control custom-checkbox mb-3">
